# reviewer

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  action.yaml  pyproject.toml
.github/workflows/: ai-review.yml  badge-update.yml  ci.yml  docker.yml  release.yml
src/reviewer/: __init__.py  __main__.py  main.py  prompts.py
