[project]
name = "reviewer"
version = "0.1.0"
description = "AI-based GitHub PR reviewer using pydantic-ai"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.5",
    "pydantic-ai>=0.6.2",
    "pygithub>=2.7.0",
    "requests>=2.31.0",
    "unidiff>=0.7.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reviewer"]
